[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ejecutable/Menu/Menu_niveles/Menu_niveles.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Menu/Menu_entrar/Fondo_menu.png" type="Texture" id=2]
[ext_resource path="res://Ejecutable/Menu/Fuentes/KIN668.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[node name="Menu_niveles" type="Node"]
script = ExtResource( 1 )

[node name="Botones_niveles" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Botones_niveles"]
position = Vector2( 2.05054, 0 )
texture = ExtResource( 2 )
centered = false

[node name="Boton_nivel1" type="Button" parent="Botones_niveles"]
margin_left = 560.0
margin_top = 35.0
margin_right = 951.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 1 )
text = "Nivel 1"
clip_text = true

[node name="Boton_nivel2" type="Button" parent="Botones_niveles"]
margin_left = 560.0
margin_top = 159.0
margin_right = 951.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 1 )
text = "Nivel 2"
clip_text = true
[connection signal="pressed" from="Botones_niveles/Boton_nivel1" to="." method="_on_Boton_nivel1_pressed"]
[connection signal="pressed" from="Botones_niveles/Boton_nivel2" to="." method="_on_Boton_nivel2_pressed"]
